// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Channel > should render a LoadingIndicator if it is loading 1`] = `
<DocumentFragment>
  <div
    class="str-chat messaging light str-chat__channel"
    id="str-chat__channel"
  >
    <div>
      Loading channel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Channel > should render empty channel container if no channel is provided and EmptyPlaceholder is null 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  />
</DocumentFragment>
`;
